# SimpleServer

./: CMakeLists.txt  README.Russian.md  README.md
Server/: program_exec.h  request_processing.cpp  request_processing.h  serv  server.cpp  socket.h  user_consol_interface.h
WebPage/: script.js  site.html  styles.css
WebPage/pages/: mithon_script.js  mython.html  mython_styles.css
